Changed API to Core 3.1. .NET 5 fails in GitHub ??

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "staticWebApps.appSubpath": "/",
     "staticWebApps.apiSubpath": "",
     "staticWebApps.outputSubpath": "./",
-    "azureFunctions.deploySubpath": "api/bin/Release/net5.0/publish",
+    "azureFunctions.deploySubpath": "api/bin/Release/netcoreapp3.1/publish",
     "azureFunctions.projectLanguage": "C#",
     "azureFunctions.projectRuntime": "~3",
     "debug.internalConsoleOptions": "neverOpen",
