--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -6,7 +6,7 @@
         },
         {
             "route": "/test",
-            "redirect":"/index2.html",
+            "rewrite":"/index2.html",
             "allowedRoles": ["authenticated"]
         },
         {"route":"/test2", "redirect":"/index2.html", "allowedRoles":["anonymous"]},
